package org.ull.es.dap.brands.audi;

public interface VehicleAudi {
    String description();
}
