package org.ull.es.dap.brands.bmw;

public interface VehicleBMW {
    String description();
}
